option('capng', type : 'feature',
  description : 'Build with libcap-ng support',
)

option('numa', type : 'feature', value: 'enabled',
  description : 'Build with numa support',
)

option('systemd', type : 'feature', value: 'enabled',
  description : 'Build with systemd support',
)

option('systemd-service', type : 'boolean',
  description : 'Install systemd service (true if systemd option is enabled)',
)

option('thermal', type : 'feature',
  description : 'Build with thermal support',
)

option('ui', type : 'feature',
  description : 'Build the UI component',
)

option('usrconfdir', type: 'string',
  description: 'Directory to systemd environment file, optionally added by user'
)

option('pkgconfdir', type: 'string',
  description: 'Directory to systemd environment file, provided by irqbalance'
)
